# PubRemote

./: .gitattributes  .gitignore  CMakeLists.txt  CNAME  PubRemote.sll  PubRemote.spj  PubRemote_events.py  README.md  Themes.slt  demo.lisp  index.html  partitions.csv  platformio.ini  postbuild_hook.py  prebuild_hook.py  quick-start.md  sdkconfig.avaspark_esp32s3_touch_128  sdkconfig.cowmote_esp32s3_tdisplay_143  sdkconfig.cowmote_esp32s3_tdisplay_143_co5300  sdkconfig.cowmote_esp32s3_tdisplay_143_nightly  sdkconfig.cowmote_esp32s3_tdisplay_143_sh8601  sdkconfig.leafblaster_esp32s3_touch_amoled_143_sh8601  sdkconfig.lilygo_esp32s3_tdisplay  sdkconfig.lilygo_esp32s3_tdisplay_143  sdkconfig.lilygo_esp32s3_tdisplay_164  sdkconfig.lilygo_esp32s3_twatch_ultra_201  sdkconfig.pingumote_esp32s3_touch_amoled_132  sdkconfig.waveshare_esp32c6_lcd_147  sdkconfig.waveshare_esp32s3_touch  sdkconfig.waveshare_esp32s3_touch_128  sdkconfig.waveshare_esp32s3_touch_amoled_143
assets/: index-B9d-LPMP.js  index-BJ5tm8RS.css  (+49 more)
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_BrightnessScreen.c  ui_CalibrationScreen.c  ui_CalibrationScreen1.c  ui_ConnectionScreen.c  ui_PairingScreen.c  ui_PairingScreen1.c  ui_PowerScreen.c  ui_SettingsScreen.c  ui_SplashScreen.c  ui_StatsScreen.c  ui_comp_hook.c  ui_events.c  ui_events.h  ui_font_Inter_14.c  ui_font_Inter_Bold_14.c  ui_font_Inter_Bold_28.c  ui_font_Inter_Bold_96.c  ui_font_Open_Sans_14.c  ui_font_Open_Sans_Bold_48.c  ui_helpers.c  ui_helpers.h  ui_img_icon_png.c  ui_theme_manager.c  ui_theme_manager.h  ui_themes.c  ui_themes.h
(+319 files in other folders)
